[gd_scene load_steps=10 format=3 uid="uid://bec60a3c1tg33"]

[ext_resource type="Texture2D" uid="uid://dljcaomy7652k" path="res://Assets/Player Character/Idle.png" id="1_ef4my"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_niqx1"]
[ext_resource type="Texture2D" uid="uid://b2al0ikc4nkdl" path="res://Assets/Enemies/Fly_idle.png" id="2_l787f"]
[ext_resource type="Theme" uid="uid://careq483a61r5" path="res://Themes/CaccaDog.tres" id="3_3kvwd"]
[ext_resource type="Texture2D" uid="uid://n2adjly5atqx" path="res://Assets/Tilesets/Tileset1k.png" id="4_i12a2"]
[ext_resource type="PackedScene" uid="uid://dw6k2vfoowlmv" path="res://Scenes/touch_ui.tscn" id="6_pihsh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q5b28"]
atlas = ExtResource("1_ef4my")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt4jc"]
atlas = ExtResource("2_l787f")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewvc0"]
atlas = ExtResource("4_i12a2")
region = Rect2(0, 160, 16, 16)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_niqx1")

[node name="DogLifeCount" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 120.0
offset_top = 4.0
offset_right = 120.0
offset_bottom = 4.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="DogLifeCount"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -81.0
offset_top = 4.0
offset_right = 15.0
offset_bottom = 44.0
grow_horizontal = 0

[node name="life1" type="TextureRect" parent="DogLifeCount/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_q5b28")
stretch_mode = 2

[node name="life2" type="TextureRect" parent="DogLifeCount/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_q5b28")
stretch_mode = 2

[node name="life3" type="TextureRect" parent="DogLifeCount/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_q5b28")
stretch_mode = 2

[node name="life4" type="TextureRect" parent="DogLifeCount/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_q5b28")
stretch_mode = 2

[node name="Annoiance" type="Control" parent="."]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 120.0
offset_top = -3.0
offset_right = 120.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Annoiance"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -31.0
offset_right = 6.0
offset_bottom = 9.0
grow_horizontal = 0
grow_vertical = 0

[node name="Fly" type="TextureRect" parent="Annoiance/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_jt4jc")
stretch_mode = 2

[node name="FlyCount" type="Label" parent="Annoiance/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_3kvwd")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "x05"

[node name="Cacca" type="TextureRect" parent="Annoiance/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_ewvc0")
stretch_mode = 2

[node name="CaccaToGo" type="Label" parent="Annoiance/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("3_3kvwd")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "x05"

[node name="TouchUI" parent="." instance=ExtResource("6_pihsh")]
